# front/openapi.json
@@ -673,6 +673,18 @@
             "title": "Horses",
             "type": "array"
           },
+          "post_time": {
+            "anyOf": [
+              {
+                "format": "date-time",
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Post Time"
+          },
           "race_class": {
             "anyOf": [
               {
@@ -769,6 +781,18 @@
             "default": false,
             "title": "Has Results",
             "type": "boolean"
+          },
+          "post_time": {
+            "anyOf": [
+              {
+                "format": "date-time",
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Post Time"
           },
           "race_class": {
             "anyOf": [
